# elasticgraph

./: .dockerignore  .env  .gitignore  .standard.yml  .yard-lint-todo.yml  .yard-lint.yml  AGENTS.md  CLAUDE.md  CODEBASE_OVERVIEW.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dind  Gemfile  MAINTAINERS_RUNBOOK.md  README.md  Rakefile  Steepfile  docker-compose.yaml  docker-compose.yml  index.html  rbs_collection.lock.yaml  rbs_collection.yaml
.github/: CODEOWNERS  dependabot.yml
about/: index.html
agent_toolkit/: README.md
agent_toolkit/modelcontextprotocol/: Makefile  README.md  pyproject.toml  pytest.ini
agent_toolkit/modelcontextprotocol/src/mcp_elasticgraph/: __main__.py  helpers.py  server.py
agent_toolkit/modelcontextprotocol/tests/: conftest.py  test_errors.py  test_helpers.py  test_server.py
ai-memory/: README.md
ai_tools/: README.md
config/: schema.rb
elasticgraph-admin/: README.md  elasticgraph-admin.gemspec
elasticgraph-admin_lambda/: README.md  elasticgraph-admin_lambda.gemspec
elasticgraph-apollo/: README.md  elasticgraph-apollo.gemspec
elasticgraph-datastore_core/: README.md  elasticgraph-datastore_core.gemspec
elasticgraph-elasticsearch/: README.md  elasticgraph-elasticsearch.gemspec
elasticgraph-graphiql/: elasticgraph-graphiql.gemspec
elasticgraph-graphql/: README.md  elasticgraph-graphql.gemspec
elasticgraph-graphql_lambda/: README.md  elasticgraph-graphql_lambda.gemspec
elasticgraph-health_check/: README.md  elasticgraph-health_check.gemspec
elasticgraph-indexer/: README.md  elasticgraph-indexer.gemspec
script/: lint  (+12 more)
(+1796 files in other folders)
